# LLM-News-Bias-Analysis

./: .gitignore  README.md  dashboard.py  engine_analytics.py  experiment_database.csv  mkdocs.yml  mock_data_generator.py  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml  docs.yml  publish-pypi.yml
app/: __init__.py
app/api/: __init__.py  engine_analytics.py
app/cli/: __init__.py  benchmark_models.py  build_report_site.py  generate_llm_dashboard_summary.py  generate_report_assets.py  list_models.py  prepare_real_incidents.py  probe_model.py  run_experiments.py
app/experiment/: __init__.py  condition_builder.py  prompt_builder.py
app/models/: __init__.py  litellm_client.py  ollama_client.py
app/parsing/: __init__.py  response_parser.py
app/schemas/: __init__.py  models.py
app/utils/: io.py
config/: models.example.yaml
configs/: config.py  models.commercial.yaml  models.example.yaml
data/: mock_incidents.jsonl  mock_model_decisions.jsonl  real_incidents_random_test.jsonl
data_prep/: build_bundles.py  embed_articles.py  load_articles.py  quality_check.py
docs/: architecture.md  data-model.md  experiment-flow.md  index.md
docs/api/: cli_modules.md  engine_analytics.md  experiment.md  index.md  ollama_client.md  parsing.md  schemas_models.md
docs/figures/: condition_to_bucket_sankey.html  counterfactual_effects.json  counterfactual_effects.md  cross_model_agreement.json  cross_model_agreement.md  failure_taxonomy.json  failure_taxonomy.md  limitations.md  model_instability.md  model_summary.md  qualitative_errors.json  qualitative_errors.md  summary.json
docs/guides/: api.md  cli.md  dashboard.md  deployment.md  examples.md  package-publishing.md  quickstart.md
outputs/: article_ids_ordered.txt  llm_dashboard_summary.json
outputs/run_20260316_193821/: experiment_requests.jsonl  model_decisions.jsonl  raw_outputs.jsonl
outputs/run_20260317_204631/: experiment_requests.jsonl  model_decisions.jsonl  raw_outputs.jsonl
outputs/run_20260401_093332/: experiment_requests.jsonl  model_decisions.jsonl  raw_outputs.jsonl
outputs/run_20260413_121640/: experiment_requests.jsonl  model_decisions.jsonl  raw_outputs.jsonl
outputs/run_20260413_132111/: experiment_requests.jsonl  model_decisions.jsonl  raw_outputs.jsonl
outputs/run_20260413_135731/: experiment_requests.jsonl  model_decisions.jsonl  raw_outputs.jsonl
outputs/run_20260414_103158/: experiment_requests.jsonl
outputs/run_20260416_171758/: model_decisions.jsonl
outputs/run_20260417_151119/: model_decisions.jsonl
outputs/run_20260417_152921/: experiment_requests.jsonl  model_decisions.jsonl
outputs/run_20260417_163830/: experiment_requests.jsonl  model_decisions.jsonl  raw_outputs.jsonl
outputs/run_20260418_091127/: experiment_requests.jsonl  model_decisions.jsonl  raw_outputs.jsonl
outputs/run_20260418_114420/: experiment_requests.jsonl  model_decisions.jsonl
tests/: test_condition_builder.py  test_generate_report_assets.py  test_io.py  test_ollama_client.py  test_prompt_builder.py  test_response_parser.py
visualize_data/: generate_plots.py
