[project]
name = "sourcerers-member1-pipeline"
version = "0.1.0"
description = "Local Ollama experiment pipeline for source-selection behavior analysis"
requires-python = ">=3.10,<3.11"
dependencies = [
  "fastapi>=0.135.2",
  "matplotlib>=3.10.7",
  "numpy>=2.2.6",
  "pandas>=2.3.3",
  "plotly>=6.7.0",
  "pydantic>=2.8.2",
  "pyyaml>=6.0.2",
  "requests>=2.32.3",
  "streamlit>=1.56.0",
  "tqdm>=4.67.1",
  "uvicorn>=0.42.0",
  "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.2"
]
docs = [
  "mkdocs>=1.6.1",
  "mkdocs-material>=9.6.17",
  "mkdocstrings[python]>=0.30.0",
  "pymdown-extensions>=10.14.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build.targets.sdist]
include = ["app", "config", "data", "tests", "README.md"]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"
